# libGamesEngines

./: CMakeLists.txt  Game.cpp  Game.h  GameLayer.cpp  GameLayer.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  GameSprite.cpp  GameSprite.h  Makefile  Makefile.inc  TimeSlice.cpp  TimeSlice.h  extern.cpp  extern.h
Algorithm/: SeedFill.cpp  SeedFill.h
Charset/: Charset.cpp  Charset.h  Charset_GB2312.cpp  Charset_GB2312.h
Cpp11/: BitBlock.cpp  BitBlock.h  DataBlock.cpp  DataBlock.h  Directory.cpp  Directory.h  ErrorNumber.cpp  ErrorNumber.h  FileLoader.cpp  FileLoader.h  Keyboard.cpp  Keyboard.h  MinMax.cpp  MinMax.h  PrintF.cpp  PrintF.h  SysTime.cpp  SysTime.h  Thread.cpp  Thread.h  define.h  typedef.h
Cpp11/Containers/: Array.h  ArrayList.h  List.h  Map.h  Set.h  StringList.cpp  StringList.h
Engines/: Engine_Android.cpp  Engine_Android.h  Engine_EGL.cpp  Engine_EGL.h  Engine_GLES.cpp  Engine_GLES.h  Engine_GLUT.cpp  Engine_GLUT.h  Engine_SDL.cpp  Engine_SDL.h  Engine_Xlib.cpp  Engine_Xlib.h
Font/: BitmapFont.cpp  BitmapFont.h  FileTTF.cpp  FileTTF.h  FileTTF_cmap.cpp  FileTTF_cmap.h  FileTTF_glyf.cpp  FileTTF_glyf.h  RendererTTF.cpp  RendererTTF.h
Image/: Bitmap.cpp  Bitmap.h  Painter.h  Pixmap.cpp  Pixmap.h
Image/ColorSpaces/: ColorCIE.cpp  ColorCIE.h  ColorCMYK.cpp  ColorCMYK.h  ColorHS.cpp  ColorHS.h  ColorRGB.cpp  ColorRGB.h  ColorYUV.cpp  ColorYUV.h
Image/FileStructs/: FileBMP.cpp  FileBMP.h  FilePNG.cpp  FilePNG.h
Images/: Bitmap.cpp  Bitmap.h  Painter.h  Pixmap.h
Images/ColorSpaces/: ColorCMYK.cpp  ColorCMYK.h  ColorHS.cpp  ColorHS.h  ColorRGB.cpp  ColorRGB.h  ColorYUV.cpp  ColorYUV.h
Images/FileStructs/: FileBMP.cpp  FileBMP.h  FileJPG.cpp  FileJPG.h  FilePNG.cpp  FilePNG.h
Lua/: EnumType.cpp  EnumType.h  GameScript.cpp  GameScript.h  LuaState.cpp  LuaState.h  TranslationMap.cpp  TranslationMap.h
Math/: Array.h  Circle.h  Cone.h  Cube.cpp  Cube.h  Fraction.h  Line.h  Number.cpp  Number.h  Point.cpp  Point.h  Polygon.h  Rectangle.h  Triangle.h
Network/: Client.cpp  Client.h  CurlEasy.cpp  CurlEasy.h  Protocol.h  Socket.cpp  Socket.h  Transceiver.cpp  Transceiver.h
Renderer/: FontTextureCache.cpp  FontTextureCache.h  ShapeRenderer.cpp  ShapeRenderer.h  Texture.cpp  Texture.h
Scenes/: GameScene_FileList.cpp  GameScene_FileList.h
WarChess/: ChessBoard.h  ChessPiece.h
Widgets/: GameButton.cpp  GameButton.h  GameDialog.cpp  GameDialog.h  GameMenu.cpp  GameMenu.h  GameMenu_String.cpp  GameMenu_String.h  GameString.cpp  GameString.h  GameTable.cpp  GameTable.h  GameTable_Dir.cpp  GameTable_Dir.h  GameText.cpp  GameText.h
Zipper/: DataBlock_deflate.cpp  DataBlock_deflate.h  DataBlock_zlib.cpp  DataBlock_zlib.h
Zipper/FileStructs/: FileGZIP.cpp  FileGZIP.h  FileZIP.cpp  FileZIP.h
executable/: GamesGLFW.cpp  GamesGLUT.cpp  GamesNativeActivity.cpp  GamesQt.cpp  GamesSDL.cpp  GamesSDL2.cpp
game/: Game_GluttonySnake.h  Game_PlaneHitPlane.cpp  Game_PlaneHitPlane.h  Game_Tetris.h
